AG-271 - Major update to support Spring Boot 4.0.0