@@ -6,21 +6,22 @@ package io.agroal.springframework.boot.health;
 import io.agroal.api.AgroalDataSource;
 import io.agroal.springframework.boot.AgroalDataSourceAutoConfiguration;
 import org.springframework.beans.factory.ObjectProvider;
-import org.springframework.boot.actuate.autoconfigure.health.ConditionalOnEnabledHealthIndicator;
-import org.springframework.boot.actuate.autoconfigure.jdbc.DataSourceHealthContributorAutoConfiguration;
-import org.springframework.boot.actuate.health.CompositeHealthContributor;
-import org.springframework.boot.actuate.health.HealthContributor;
-import org.springframework.boot.actuate.jdbc.DataSourceHealthIndicator;
+import org.springframework.beans.factory.config.ConfigurableListableBeanFactory;
+import org.springframework.beans.factory.support.SimpleAutowireCandidateResolver;
 import org.springframework.boot.autoconfigure.AutoConfiguration;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnBean;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnClass;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnMissingBean;
+import org.springframework.boot.health.autoconfigure.contributor.ConditionalOnEnabledHealthIndicator;
+import org.springframework.boot.health.contributor.CompositeHealthContributor;
+import org.springframework.boot.health.contributor.HealthContributor;
 import org.springframework.boot.jdbc.DataSourceUnwrapper;
+import org.springframework.boot.jdbc.autoconfigure.health.DataSourceHealthContributorAutoConfiguration;
+import org.springframework.boot.jdbc.health.DataSourceHealthIndicator;
 import org.springframework.boot.jdbc.metadata.CompositeDataSourcePoolMetadataProvider;
 import org.springframework.boot.jdbc.metadata.DataSourcePoolMetadata;
 import org.springframework.boot.jdbc.metadata.DataSourcePoolMetadataProvider;
 import org.springframework.context.annotation.Bean;
-import org.springframework.util.Assert;
 
 import javax.sql.DataSource;
 
@@ -28,7 +29,7 @@ import java.util.Map;
 import java.util.stream.Collectors;
 
 @AutoConfiguration( before = DataSourceHealthContributorAutoConfiguration.class, after = AgroalDataSourceAutoConfiguration.class )
-@ConditionalOnClass( { DataSourceHealthContributorAutoConfiguration.class, AgroalDataSource.class } )
+@ConditionalOnClass( { DataSourceHealthContributorAutoConfiguration.class, AgroalDataSource.class, ConditionalOnEnabledHealthIndicator.class } )
 @ConditionalOnBean( DataSource.class )
 @ConditionalOnEnabledHealthIndicator( "db" )
 public class AgroalDataSourceHealthContributorAutoConfiguration {
@@ -36,13 +37,13 @@ public class AgroalDataSourceHealthContributorAutoConfiguration {
     private final DataSourcePoolMetadataProvider poolMetadataProvider;
 
     public AgroalDataSourceHealthContributorAutoConfiguration( ObjectProvider<DataSourcePoolMetadataProvider> metadataProviders ) {
-        poolMetadataProvider = new CompositeDataSourcePoolMetadataProvider( metadataProviders.orderedStream().collect( Collectors.toList() ) );
+        poolMetadataProvider = new CompositeDataSourcePoolMetadataProvider( metadataProviders.orderedStream().toList() );
     }
 
     @Bean
     @ConditionalOnMissingBean( name = { "dbHealthIndicator", "dbHealthContributor" } )
-    public HealthContributor dbHealthContributor( Map<String, DataSource> dataSources ) {
-        Assert.notEmpty( dataSources, "Beans must not be empty" );
+    public HealthContributor dbHealthContributor( ConfigurableListableBeanFactory beanFactory ) {
+        Map<String, DataSource> dataSources = SimpleAutowireCandidateResolver.resolveAutowireCandidates( beanFactory, DataSource.class, false, true );
         Map<String, HealthContributor> healthContributors = dataSources.entrySet()
                 .stream()
                 .map( this::createContributor )
